--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "eslint": "^5.13.0",
     "nodemon": "^1.18.9"
   }
 }
